@@ -10,6 +10,8 @@ cups (1.5.2-6) UNRELEASED; urgency=low
 
   [ Martin Pitt ]
   * debian/control: Wrap dependencies.
+  * debian/control, debian/rules: Move from hardening-wrapper to using
+    dpkg-buildflags. Bump dpkg-dev build dependency to (>= 1.16.1~) for this.
 
  -- Till Kamppeter <till.kamppeter@gmail.com>  TUe, 28 Feb 2012 17:43:01 +0100
 
